--- a/IdP/edit-webapp/css/main.css
+++ b/IdP/edit-webapp/css/main.css
@@ -1,92 +1,58 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-header, footer, section, nav {
-    display: block;
-}
-html, body {
-    height: 100%;
-}
+
 body {
+
     font-family:Verdana, Geneva, sans-serif;
-    font-size: 12px;
+    font-size: 14px;
     line-height: 1.5;
-    color: #717171;
-    background: #717171;
+    color: #eaeaea;
+    background-image: URL('../images/shib_wp.jpg');
 }
+
+footer {
+    display:none;
+}
+
+header, .content{
+    margin-left:auto;
+    margin-right:auto;
+    text-align:center;
+    width:500px;
+}
+
+header h3 {
+    color:red;
+}
+
 a:link,
 a:visited {
     text-decoration: none;
     color: #717171;
 }
-img {
-    max-width: 100%;
-    margin-bottom: 12px;
+
+.wrapper{
+    padding-top:100px;
 }
 
-.wrapper {
-    background: #ffffff;
+.main-img{
+    width:250px;
+    border-radius:7px;
+    margin-bottom:13px;
+    -webkit-filter: drop-shadow(-0px -25px 50px #eaeaea91);
+    filter:drop-shadow(-0px -25px 50px #eaeaea91);
 }
 
-.container {
-    position: relative;
-    left: 34%;
-    width: 540px;
-    margin-left: -270px;
-}
-.container-footer {
-    padding-top: 12px;
-}
-@media only screen and (max-width: 1020px) {
-    .container {
-        left: 45%;
-    }
-}
-@media only screen and (max-width: 650px) {
-    .container {
-        position: static;
-        margin: 0 auto;
-        width: 280px;
-    }
-}
-
-header {
-    padding: 20px 0;
-}
-
-.logo img {
-    border: none;
-}
-@media only screen and (max-width: 650px) {
-    .logo img {
-        display: none;
-    }
-    .logo {
-        background: url(../images/dummylogo-mobile.png) no-repeat top center;
-        display: block;
-        height: 115px;
-        width: 100px;
-        margin: 0 auto;
-    }
-}
-
-.content {
-    padding-bottom: 80px;
-    overflow: hidden;
-}
-
-.column {
-    float: left;
-}
-.column.one {
-    width: 50%;
-    margin-right: 48px;
+.message-box{
+    color:white;
+    font-weight:bold;
+    margin-bottom: 25px;
 }
 
 form {
-    width: 240px;
-    padding-bottom: 21px;
+    margin-left:-10px;
+    text-align:left;
+    display:inline-block;
+    width: 270px;
+    padding-bottom: 0px;
 }
 form label { /* labels are hidden */
     font-weight: bold;
@@ -96,37 +62,57 @@ form legend {
     margin-bottom: 12px;
 }
 .form-element-wrapper {
-    margin-bottom: 12px;
+    margin-bottom: 20px;
 }
 .form-element {
     width: 100%;
-    padding: 13px 12px;
+    padding: 13px 10px;
+    padding-right:0px;
     border: none;
     font-size: 14px;
     border-radius: 4px;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
 }
+
+input, button {
+    margin-top: 5px;
+}
+
 .form-field {
     color: #B7B7B7;
-    border: 1px solid #B7B7B7;
+    border: 1px solid black
 }
 .form-field-focus,
 .form-field:focus,
 input[type="text"]:focus {
     color: #333333;
-    border-color: #333;
+    border: 1px solid white;
+    outline:none;
+    box-shadow: 0px 0px 0px red;
+    -webkit-filter: drop-shadow(0px 0px 8px red);
+    filter:drop-shadow(0px 0px 8px red);
 }
 .form-button {
-    background: #B61601;
+    background: #333;
     box-sizing: content-box;
     -moz-box-sizing: content-box;
     color: #ffffff;
     cursor: pointer;
+    border: 1px solid black;
+    outline:0 !important;
 }
 .form-button:hover {
-    background: #FF6400;
+    background: #be0000;
+    border:none;
+    box-shadow: 0px 0px 10px red;
 }
+
+.form-button:active{
+    outline: 0 !important;
+    background: #9e0000 !important;
+}
+
 .form-error {
     padding: 0;
     color: #B61601;
