--- a/IdP/views/user-prefs.vm
+++ b/IdP/views/user-prefs.vm
@@ -14,7 +14,8 @@
     	<meta name="viewport" content="width=device-width,initial-scale=1.0">
     	<title>#springMessageText("idp.userprefs.title", "Web Login Service") - #springMessageText("idp.userprefs.title.suffix", "Login Preferences")</title>
     	<link rel="stylesheet" type="text/css" href="$request.getContextPath()/css/main.css">
-    	<script language="Javascript">
+        <link rel='shortcut icon' type='image/x-icon' href='$request.getContextPath()/favicon.ico' />
+        <script language="Javascript">
     	<!--
     	#parse( "user-prefs.js" )
     	// -->
