--- a/IdP/views/client-storage/client-storage-write.vm
+++ b/IdP/views/client-storage/client-storage-write.vm
@@ -21,6 +21,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>$title - $titleSuffix</title>
         <link rel="stylesheet" type="text/css" href="$request.getContextPath()/css/main.css">
+        <link rel='shortcut icon' type='image/x-icon' href='$request.getContextPath()/favicon.ico' />
         <script>
         <!--
         #include( "client-storage/local-storage-write.js" )
