--- a/IdP/views/spnego-unavailable.vm
+++ b/IdP/views/spnego-unavailable.vm
@@ -18,7 +18,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>#springMessageText("idp.title", "Web Login Sevice") - #springMessageText("${eventKey}.title", "Error")</title>
-    <link rel="stylesheet" type="text/css" href="$request.getContextPath()/css/main.css">
+      <link rel='shortcut icon' type='image/x-icon' href='$request.getContextPath()/favicon.ico' />
+      <link rel="stylesheet" type="text/css" href="$request.getContextPath()/css/main.css">
   </head>
   
   <body onload="window.location = '$errorUrl'">
