--- a/IdP/edit-webapp/css/main.css
+++ b/IdP/edit-webapp/css/main.css
@@ -41,7 +41,7 @@ header, .content{
 .content {
     text-align: center;
     width: 400px;
-    border: 2px solid black;
+    border: 3px solid #969696;
     padding:25px;
     border-radius: 15px;
     background-color: rgba(0, 0, 0, 0.7);
@@ -76,8 +76,7 @@ a:visited {
 }
 
 .message-box{
-    color:#6dcc6b;
-    font-weight:bold;
+    color:#cccccc;
     margin-bottom: 35px;
     text-align:left;
     width:90%;
