--- a/views/duo.vm
+++ b/views/duo.vm
@@ -26,6 +26,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>#springMessageText("idp.title", "Web Login Service")</title>
     <link rel="stylesheet" type="text/css" href="$request.getContextPath()/css/main.css">
+    <link rel='shortcut icon' type='image/x-icon' href='$request.getContextPath()/favicon.ico' />
     <style>
       #duo_iframe {
         width: 100%;
