--- a/views/intercept/attribute-release.vm
+++ b/views/intercept/attribute-release.vm
@@ -31,6 +31,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="$request.getContextPath()/css/consent.css">
+        <link rel='shortcut icon' type='image/x-icon' href='$request.getContextPath()/favicon.ico' />
         <title>#springMessageText("idp.attribute-release.title", "Information Release")</title>
     </head>
     <body>
