--- a/views/intercept/expiring-password.vm
+++ b/views/intercept/expiring-password.vm
@@ -23,6 +23,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>#springMessageText("idp.title", "Web Login Service")</title>
         <link rel="stylesheet" type="text/css" href="$request.getContextPath()/css/main.css">
+        <link rel='shortcut icon' type='image/x-icon' href='$request.getContextPath()/favicon.ico' />
         <meta http-equiv="refresh" content="20;url=$flowExecutionUrl&_eventId_proceed=1">
     </head>
       
