--- a/views/intercept/terms-of-use.vm
+++ b/views/intercept/terms-of-use.vm
@@ -21,6 +21,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="$request.getContextPath()/css/consent.css">
+        <link rel='shortcut icon' type='image/x-icon' href='$request.getContextPath()/favicon.ico' />
         <title>#springMessageText("${termsOfUseId}.title", "Terms of Use")</title>
     </head>
     <body>
