--- a/views/logout-complete.vm
+++ b/views/logout-complete.vm
@@ -20,6 +20,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>#springMessageText("idp.title", "Web Login Service")</title>
+        <link rel='shortcut icon' type='image/x-icon' href='$request.getContextPath()/favicon.ico' />
         <link rel="stylesheet" type="text/css" href="$request.getContextPath()/css/main.css">
     </head>
 
